--- a/flores.html
+++ b/flores.html
@@ -54,7 +54,7 @@
     Como flores amarillas que alegran el día,<br>
     tu sonrisa ilumina toda mi vida.<br>
     ¡Eres mi sol brillante! ✨<br>
-    ¡Te quiero mi Marcia!♡
+    ¡Te quiero mucho mi Marcia!♡
   </div>
 
   <div class="night"></div>
